--- a/about.html
+++ b/about.html
@@ -130,11 +130,11 @@
           </tr>
           <tr>
             <td>LinkedIn</td>
-            <td><a href="https://www.linkedin.com/in/annisa-fitriani-747a26284?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Profil LinkedIn</a></td>
+            <td><a href="https://www.linkedin.com/in/annisa-fitriani-747a26284?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">Profil LinkedIn</a></td>
           </tr>
           <tr>
             <td>Curriculum Vitae</td>
-            <td><a href="https://drive.google.com/file/d/1NpLJOuCqlnBP2qFwh55Vd9D0mgPTlCwJ/view?usp=drivesdk" target="_blank">Lihat CV</a></td>
+            <td><a href="https://drive.google.com/file/d/1NpLJOuCqlnBP2qFwh55Vd9D0mgPTlCwJ/view?usp=drivesdk" target="_blank" rel="noopener noreferrer">Lihat CV</a></td>
           </tr>
         </table>
       </div>
