--- a/contact-us.html
+++ b/contact-us.html
@@ -1,49 +1,151 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hubungi Kami</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tentang Saya</title>
+  <link rel="stylesheet" href="style.css"/>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fefefe;
+      color: #333;
+    }
+
+    header {
+      background-color: #3366ff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    .button {
+      background-color: #f0f8ff;
+      color: #3366ff;
+      padding: 10px 16px;
+      text-decoration: none;
+      border-radius: 6px;
+      margin: 5px;
+      display: inline-block;
+    }
+
+    main {
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #3366ff;
+    }
+
+    .table-container {
+      overflow-x: auto;
+      margin-top: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 12px 15px;
+      border: 1px solid #ccc;
+      text-align: left;
+    }
+
+    th {
+      background-color: #e6f0ff;
+    }
+
+    .back-link {
+      display: inline-block;
+      margin-top: 30px;
+      background-color: #3366ff;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+
+    .back-link:hover {
+      background-color: #254eda;
+    }
+
+    footer {
+      background-color: #1e2a38;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>PERPUSTAKAAN ANNISA</h1>
-        <nav>
-            <a href="index.html" class="button">Beranda</a>
-            <a href="about.html" class="button">Tentang Saya</a>
-        </nav>
-    </header>
-    <main>
-        <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
-        <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
-        <ul>
-            <li><a href="mailto:annsaftrnii254@gmail.com">Email</a></li>
-            <li><a href="https://wa.me/62287034757" target="_blank">Chat via WhatsApp</a></li>
-            <li><a href="https://instagram.com/annsaftrnii" target="_blank">Kunjungi Instagram</a></li>
-        </ul>
+  <header>
+    <h1>PERPUSTAKAAN ANNISA</h1>
+    <nav>
+      <a href="index.html" class="button">Beranda</a>
+      <a href="contact-us.html" class="button">Hubungi Kami</a>
+    </nav>
+  </header>
 
-        <h3>Atau, Anda bisa mengisi formulir di bawah ini:</h3>
-        <form action="proses-form.php" method="post">
-            <label for="nama">Nama</label>
-            <input type="text" id="nama" name="nama" placeholder="Masukkan nama Anda" required>
+  <main>
+    <section>
+      <h2>Data Pribadi</h2>
+      <p>Halaman ini berisi tentang informasi pribadi saya.</p>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Masukkan email Anda" required>
+      <div class="table-container">
+        <table>
+          <tr>
+            <th>Informasi</th>
+            <th>Detail</th>
+          </tr>
+          <tr>
+            <td>Nama</td>
+            <td>Annisa Fitriani</td>
+          </tr>
+          <tr>
+            <td>NIM</td>
+            <td>220709027</td>
+          </tr>
+          <tr>
+            <td>Program Studi</td>
+            <td>Perpustakaan dan Sains Informasi</td>
+          </tr>
+          <tr>
+            <td>Fakultas</td>
+            <td>Ilmu Budaya</td>
+          </tr>
+          <tr>
+            <td>Universitas</td>
+            <td>Universitas Sumatera Utara</td>
+          </tr>
+          <tr>
+            <td>LinkedIn</td>
+            <td><a href="https://www.linkedin.com/in/annisa-fitriani-747a26284?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">Profil LinkedIn</a></td>
+          </tr>
+          <tr>
+            <td>Curriculum Vitae</td>
+            <td><a href="https://drive.google.com/file/d/1NpLJOuCqlnBP2qFwh55Vd9D0mgPTlCwJ/view?usp=drivesdk" target="_blank" rel="noopener noreferrer">Lihat CV</a></td>
+          </tr>
+        </table>
+      </div>
 
-            <label for="pesan">Pesan</label>
-            <textarea id="pesan" name="pesan" placeholder="Tulis pesan Anda" required></textarea>
+      <a href="index.html" class="back-link">Kembali ke Beranda</a>
+    </section>
+  </main>
 
-            <button type="submit">Kirim</button>
-        </form>
-        
-        <a href="index.html" class="back-link">Kembali ke Beranda</a>
-    </main> 
-</footer>
-  <p>© 2025 Annisa Fitriani</p>
-    </footer>
+  <footer>
+    <p>© Annisa Fitriani 2025</p>
+  </footer>
 </body>
 </html>
-
-       
 
