--- a/formulir.html
+++ b/formulir.html
@@ -1,48 +1,127 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Formulir Kunjungan</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Formulir Kunjungan</title>
+  <link rel="stylesheet" href="style.css"/>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fefefe;
+      color: #333;
+    }
+
+    header {
+      background-color: #3366ff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    .button {
+      background-color: #f0f8ff;
+      color: #3366ff;
+      padding: 10px 16px;
+      text-decoration: none;
+      border-radius: 6px;
+      margin: 5px;
+      display: inline-block;
+    }
+
+    main {
+      padding: 30px;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #3366ff;
+    }
+
+    label {
+      font-weight: bold;
+    }
+
+    input[type="text"],
+    input[type="date"],
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+
+    input[type="submit"] {
+      background-color: #3366ff;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #254eda;
+    }
+
+    footer {
+      background-color: #1e2a38;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Formulir Kunjungan Perpustakaan Annisa</h1>
-        <nav>
-            <a href="index.html">Beranda</a>
-            <a href="about.html">Tentang Saya</a>
-            <a href="tabel.html">Tabel Perkalian</a>
-        </nav>
-    </header>
+  <header>
+    <h1>Formulir Kunjungan Perpustakaan Annisa</h1>
+    <nav>
+      <a href="index.html" class="button">Beranda</a>
+      <a href="about.html" class="button">Tentang Saya</a>
+      <a href="tabel.html" class="button">Tabel Perkalian</a>
+    </nav>
+  </header>
 
-    <main>
-        <form action="#" method="post">
-            <label for="nama">Nama Lengkap:</label><br>
-            <input type="text" id="nama" name="nama" required><br><br>
+  <main>
+    <h2>Isi Formulir di Bawah Ini</h2>
+    <form action="#" method="post">
+      <label for="nama">Nama Lengkap:</label>
+      <input type="text" id="nama" name="nama" required>
 
-            <label for="nim">NIM/NIS:</label><br>
-            <input type="text" id="nim" name="nim" required><br><br>
+      <label for="nim">NIM/NIS:</label>
+      <input type="text" id="nim" name="nim" required>
 
-            <label for="instansi">Asal Instansi:</label><br>
-            <input type="text" id="instansi" name="instansi" required><br><br>
+      <label for="instansi">Asal Instansi:</label>
+      <input type="text" id="instansi" name="instansi" required>
 
-            <label for="tujuan">Tujuan Kunjungan:</label><br>
-            <select id="tujuan" name="tujuan" required>
-                <option value="">-- Pilih --</option>
-                <option value="membaca">Membaca Buku</option>
-                <option value="mengerjakan tugas">Mengerjakan Tugas</option>
-                <option value="mencari referensi">Mencari Referensi</option>
-            </select><br><br>
+      <label for="tujuan">Tujuan Kunjungan:</label>
+      <select id="tujuan" name="tujuan" required>
+        <option value="">-- Pilih --</option>
+        <option value="membaca">Membaca Buku</option>
+        <option value="mengerjakan tugas">Mengerjakan Tugas</option>
+        <option value="mencari referensi">Mencari Referensi</option>
+      </select>
 
-            <label for="tanggal">Tanggal Kunjungan:</label><br>
-            <input type="date" id="tanggal" name="tanggal" required><br><br>
+      <label for="tanggal">Tanggal Kunjungan:</label>
+      <input type="date" id="tanggal" name="tanggal" required>
 
-            <input type="submit" value="Kirim">
-        </form>
-    </main>
+      <input type="submit" value="Kirim">
+    </form>
+  </main>
 
-    <footer>
-        <p>© 2025 Annisa Fitriani</p>
-    </footer>
+  <footer>
+    <p>© 2025 Annisa Fitriani</p>
+  </footer>
 </body>
 </html>
