--- a/index.html
+++ b/index.html
@@ -432,21 +432,40 @@
     </section>
 
     <!-- Event -->
-    <h2>Event Kegiatan</h2>
-    <div>
-        <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" />
-        <div>
-            <h2>Library Literacy Fest</h2>
-            <p><strong>Tanggal:</strong> 29 November-19 Desember 2024</p>
-            <p><em>Lokasi: Perpustakaan UMS</em></p>
-            <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS untuk meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan referensi.</p>
-            <a href="#" aria-label="Info Selengkapnya tentang Library Literacy Fest">Info Selengkapnya</a>
-            <p style="margin-top: 10px;">
-                📱 <strong>Hubungi via WhatsApp:</strong>
-                <a href="https://wa.me/628122605573" target="_blank" rel="noopener noreferrer" style="color: #2ea44f;">+62 812-3456-7890</a>
-            </p>
-        </div>
-    </div>
+<h2>Event Kegiatan</h2>
+
+<!-- Event 1: Library Literacy Fest -->
+<div style="margin-bottom: 40px;">
+  <img src="FtRGKx5GoV1vtOfGUa7do93pG4gbpKmPfLoNc1ma.jpg" alt="Library Literacy Fest" style="max-width: 100%; height: auto; border-radius: 8px;" />
+  <div>
+    <h3>Library Literacy Fest</h3>
+    <p><strong>Tanggal:</strong> 29 November–19 Desember 2024</p>
+    <p><em>Lokasi: Perpustakaan UMS</em></p>
+    <p>Library Literacy Fest diadakan oleh Perpustakaan dan Pusat Layanan Digital UMS untuk meningkatkan kompetensi, kualitas publikasi, dan kebermanfaatan referensi.</p>
+    <a href="#" aria-label="Info Selengkapnya tentang Library Literacy Fest">Info Selengkapnya</a>
+    <p style="margin-top: 10px;">
+      📱 <strong>Hubungi via WhatsApp:</strong>
+      <a href="https://wa.me/628122605573" target="_blank" rel="noopener noreferrer" style="color: #2ea44f;">+62 812-3456-7890</a>
+    </p>
+  </div>
+</div>
+
+<!-- Event 2: Bedah Buku -->
+<div>
+  <img src="WhatsApp Image 2025-06-04 at 14.27.57_4b72043d.jpg" alt="Bedah Buku" style="max-width: 100%; height: auto; border-radius: 8px;" />
+  <div>
+    <h3>Bedah Buku</h3>
+    <p><strong>Tanggal:</strong> Ahad, 9 Maret 2025 pukul 13.30 WIB s.d. selesai</p>
+    <p><em>Lokasi: Baitul Hikmah, Jalan Labu Gang Wakaf, Kelurahan Payaroba, Binjai Barat</em></p>
+    <p>Insyaallah Ramadhan 1446 H ini, buku setebal 486 halaman karya Dr. Ahmad Umar Hasyim ini akan kita bedah bersama Kak Henny Puspita Sari (bookstagram, blogger dan novelis) dipandu host Syifa Aulia, mahasiswi PBSI STKIP Budidaya Binjai.</p>
+    <a href="#" aria-label="Info Selengkapnya tentang Bedah Buku">@diskusibukubinjai</a>
+    <p style="margin-top: 10px;">
+      📱 <strong>Hubungi via WhatsApp:</strong>
+      <a href="https://wa.me/628122605573" target="_blank" rel="noopener noreferrer" style="color: #2ea44f;">+62 812-3456-7890</a>
+    </p>
+  </div>
+</div>
+
 
     <footer>
         <p>© 2025 Annisa Fitriani</p>
